--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="tiles"></div>
     <div class="main-page-intro center">
       <div class="main-page-name">Vivaan Singhvi</div>
-      <div class="main-page-desc">CLick anywhere to enter.</div>
+      <div class="main-page-desc">Click anywhere to enter.</div>
     </div>
     <div class="main-page-container center">
       <div class="main-page-portfolio hidden">
@@ -150,8 +150,8 @@
               >
                 <h3>Physical Patch Attack</h3>
                 <p>
-                  Camoflauging real-life objects from YOLO models using neural
-                  3D recontruction
+                  Camouflaging real-life objects from YOLO models using neural
+                  3D reconstruction
                 </p>
               </div>
               <div
