--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 style="background-image: url('assets/images/cudaconv.png')"
               >
                 <h3>Custom CUDA Convolution</h3>
-                <p>A novel, efficient, GPU-friendly convolution algorithm</p>
+                <p>A new, efficient, GPU-friendly convolution algorithm</p>
               </div>
               <div
                 class="project-card"
