--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <section id="about" class="about">
             <h2>About Me</h2>
             <p>
-              I love anything machine learning, and am particularly interested
+              I love anything machine learning, but I am particularly interested
               in computer vision systems and how to break them. Lately, I've
               been especially intrigued with both the development and
               application of 3D reconstruction algorithms.
@@ -315,10 +315,12 @@
     <div id="project-modal" class="project-modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <div id="modal-image" class="modal-image"></div>
-        <h2 id="modal-title">Project Title</h2>
-        <div id="modal-body">
-          <p>Project details go here.</p>
+        <div class="modal-scroll">
+          <div id="modal-image" class="modal-image"></div>
+          <h2 id="modal-title">Project Title</h2>
+          <div id="modal-body">
+            <p>Project details go here.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -327,9 +329,11 @@
     <div id="coursework-modal" class="coursework-modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2 id="coursework-title">Coursework</h2>
-        <div id="coursework-body" class="coursework-body">
-          <p>Course details go here.</p>
+        <div class="modal-scroll">
+          <h2 id="coursework-title">Coursework</h2>
+          <div id="coursework-body" class="coursework-body">
+            <p>Course details go here.</p>
+          </div>
         </div>
       </div>
     </div>
