changed ml researcher to ml and computer vision

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="portfolio-content">
           <section id="hero" class="hero">
             <h1>Hello, I'm Vivaan.</h1>
-            <p>Machine Learning Researcher</p>
+            <p>Machine Learning & Computer Vision</p>
           </section>
           <section id="about" class="about">
             <h2>About Me</h2>
