updated content from last year

--- a/index.html
+++ b/index.html
@@ -45,20 +45,15 @@
         <div class="portfolio-content">
           <section id="hero" class="hero">
             <h1>Hello, I'm Vivaan.</h1>
-            <p>Machine Learning & Software Engineering</p>
+            <p>Software Engineering & Machine Learning</p>
           </section>
           <section id="about" class="about">
             <h2>About Me</h2>
             <p>
-              I love anything machine learning, but I am particularly interested
-              in computer vision systems and how to break them. Lately, I've
-              been especially intrigued with both the development and
-              application of 3D reconstruction algorithms.
-            </p>
-            <p>
-              I also have broad experience across many fields of computer
-              science like software engineering, operating systems, and GPU
-              programming.
+              I enjoy building complex, performant, and scalable software. I'm 
+              motivated by solving difficult technical problems in a simple manner,
+              and designing systems that remain reliable and maintainable 
+              as they grow.
             </p>
 
             <div class="education">
@@ -90,9 +85,8 @@
                   EECS 482: Operating Systems | January 2026 &ndash; May 2026
                 </p>
                 <p class="experience-description">
-                  Will assist in teaching the course, grading assignments,
-                  hosting office hours, and promptly answering questions on
-                  Piazza.
+                  Assisting in teaching the course, grading assignments, hosting office
+                  hours, and promptly answering questions on Piazza.
                 </p>
               </div>
               <div class="experience-item">
@@ -102,7 +96,7 @@
                   May 2026
                 </p>
                 <p class="experience-description">
-                  Mentoring 16 first-years as they engage in undergraduate
+                  Mentoring 16 first-year students as they engage in undergraduate
                   research, developing academic and professional skills.
                 </p>
               </div>
@@ -112,7 +106,7 @@
                   Oak Ridge National Laboratory | May 2025 &ndash; August 2025
                 </p>
                 <p class="experience-description">
-                  Applied 3D reconstruction algorithms for adversarial machine
+                  Applied 3D reconstruction algorithms to adversarial machine
                   learning.
                 </p>
               </div>
@@ -124,7 +118,7 @@
                 </p>
                 <p class="experience-description">
                   Optimized phylogenetic reconstruction for digital evolution by
-                  thousands of times. Currently working on analyzing evolution
+                  several orders of magnitude. Currently analyzing evolutionary dynamics
                   in cellular automata.
                 </p>
               </div>
@@ -134,7 +128,7 @@
                   Oak Ridge National Laboratory | June 2024 &ndash; July 2024
                 </p>
                 <p class="experience-description">
-                  Developed a novel attack and defense for image classification
+                  Developed a novel defense for and attack against image classification
                   models.
                 </p>
               </div>
@@ -150,7 +144,7 @@
               >
                 <h3>Physical Patch Attack</h3>
                 <p>
-                  Camouflaging real-life objects from YOLO models using neural
+                  Camouflaging real-world objects from YOLO models using neural
                   3D reconstruction
                 </p>
               </div>
@@ -201,7 +195,7 @@
               >
                 <h3>LLM Interpretability</h3>
                 <p>
-                  An analysis on feature sparsification in a language model's
+                  An analysis of feature sparsification in a language model's
                   activations
                 </p>
               </div>
@@ -213,7 +207,7 @@
                 "
               >
                 <h3>Rubik's Cube Solver</h3>
-                <p>Reconstructs and solves a 3x3x3 Rubik's cube from a video</p>
+                <p>Reconstructs and solves a 3×3×3 Rubik's cube from video input</p>
               </div>
               <div
                 class="project-card"
@@ -221,7 +215,7 @@
                 style="background-image: url('assets/images/bim.png')"
               >
                 <h3>Bim</h3>
-                <p>A feature-rich multi-modal terminal text editor, like Vim</p>
+                <p>A feature-rich multimodal terminal text editor, like Vim</p>
               </div>
               <div
                 class="project-card"
